--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,11 +29,9 @@ jobs: # a collection of steps
           command: |
             # Skip this for other nodes
             if [ "$CIRCLE_NODE_INDEX" == 0 ]; then
-              ./gradlew assemble
+              ./java/gradlew assemble
             fi
       # As the JAR was only assembled in the first build container, build/libs will be empty in all the other build containers.
-      - store_artifacts:
-          path: build/libs
       # See https://circleci.com/docs/2.0/deployment-integrations/ for deploy examples
 workflows:
   version: 2
