--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,15 +12,12 @@ jobs: # a collection of steps
     steps: # a collection of executable commands
       - checkout # check out source code to working directory
       - run:
-          name: change dir
-          command: cd java/        
-
-      - run:
           name: Assemble JAR
           command: |
+            cd java/
             # Skip this for other nodes
             if [ "$CIRCLE_NODE_INDEX" == 0 ]; then
-              ./java/gradlew assemble
+              ./gradlew assemble
             fi
       # As the JAR was only assembled in the first build container, build/libs will be empty in all the other build containers.
       # See https://circleci.com/docs/2.0/deployment-integrations/ for deploy examples
