--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,9 @@
-.idea
-.vs
-DSLib/.idea/
-DSLib/.vs
-DSLib/bin
-DSLib/obj
-java/.idea
+# Ignore Gradle project-specific cache directory
+.gradle
 
+# Ignore Gradle build output directory
+build
+
+.idea
+out
+gradle
